-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.501 2009-05-07 23:08:58 guru Exp $
-----------------------------------------------------------------------------------------

2009-05-07	pwessel
	* gmt_map.c:		For wesn clipping with curved boundaries, needed a more robust
				Sutherland/Hodgman algorithm that handles curved boundaries.
2009-05-06	pwessel
	* *.c,txt,tex:		While remaining backwards compatible, we no longer announce that
				GMT will search GMT_IMGDIR and GMT_GRIDDIR.  Going forward, we will
				document the user of GMT_DATADIR and GMT_USERDIR only.
2009-05-06	remko
	* pglegend.c:		Allow S record not to have <text>. Until now, when left empty would
				use whatever <text> was set to in previous record.
	* pslegend.txt:		Changed accordingly, plus some additional polishing.
	* GMT_sealand.cpt:	Changed hue interval on one line from 0-345 to 360-345 to prevend
				wrong interpolation.
	* GMT_cyclic.cpt:	Reduced to one line.
	* gmt_support.c:	GMT_continuous based on HSV (not RGB) values when read as HSV.

2009-05-03	jluis
	* mgd77/mgd77.c:	Fixed bug in MGD77_igrf10syn routine (mistake done while cleaning the
				f2c versiom) that resulted in altitude always being on Earth surface
				when geocentric coords were used.

2009-05-03	pwessel
	* mgd77/mgd77magref.c:	New mgd77 program used to evaluate the CM4 comprehensive geomagnetic
				model, a more sophisticated alternative to IGRF, or IGRF.  Based on
				a f2c translation of NASA Fortran code by J. Luis.

2009-05-01	pwessel
	* pslib.c:		Check if input arg eps == NULL before using this pointer
	
2009-04-30	pwessel
	* gmt_map.c:		Incorrectly used central longitude to set default midpoint for 3-D maps
				using the -E...+ mechanism when data were not geographic.

2009-04-29	remko
	* PSL_prologue.ps:	Changed "bind def" to "def" in function /FS. The "bind def" slowed
				things down significantly when there are a lot of color changes.